[project]
name = "codex-usage"
version = "0.1.11"
description = "OpenClaw-aligned Codex OAuth account manager and usage viewer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["certifi>=2024.8.30"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
codex-usage = "codex_usage.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
